# perceptionVSimagination

./: .gitignore  .pipeline_state_subj01_novel.json  .pre-commit-config.yaml  ADAPTER_QUICK_START.md  AGENTS.md  CITATION.cff  COMMANDS.txt  Documentation.md  GETTING_STARTED.md  Makefile  PIPELINE_SUMMARY.md  PLANS.md  README.md  START_HERE.md  USAGE_EXAMPLES.md  environment.yml  pyproject.toml  requirements.txt
.codex/: config.toml
.cursor/plans/: research-level_project_overhaul_6f915465.plan.md
.github/workflows/: ci.yml
configs/: README.md  README_old.md  base.yaml  clip.yaml  data.yaml
configs/acquisition/: full_overlap_external_mount_request.json
configs/canonical/: animus_core_decoder.yaml  full_imagery_overlap_shared_only.yaml  max_available_overlap.yaml  multisubj_overlap_bootstrap.yaml  public_nod_imagenet_run10_shared_only.yaml  public_nod_imagenet_run10_shared_only_paper2_baseline.yaml  (+4 more)
docs/: ANIMUS_CORE_DECODER.md  ANIMUS_INTEGRATION.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_LADDER.md  CURRENT_EVIDENCE_FREEZE.md  CURRENT_STATE.md  DATA_ACQUISITION_PROGRAM.md  DATA_EXPANSION_AUDIT.md  EXPANDED_OVERLAP_COMPARISON.md  EXPERIMENT_REGISTRY.md  EXTERNAL_DATA_INTEGRATION_PLAN.md  LIMITATIONS.md  MIGRATION_GUIDE.md  MOUNT_REQUEST_PLAN.md  NOD_PUBLIC_DATASET.md  NOVEL_CONTRIBUTIONS_IMPLEMENTATION.md  NOVEL_CONTRIBUTIONS_QUICK_REF.md  PAPER_1_CLAIMS_MAP.md  PAPER_1_FIGURES_AND_TABLES.md  PAPER_1_OUTLINE.md  PAPER_2_PUBLIC_NOD_ANIMUS_LANE.md  PAPER_GRADE_EVALUATION.md  PAPER_POSITIONING.md  PROJECT_MASTER_LOG.md  PUBLIC_DATASET_INTEGRATION_PLAN.md  PUBLIC_DATASET_OPPORTUNITY_MAP.md  README.md  REAL_BOOTSTRAP_REPORT.md  REPRODUCIBILITY.md  ROADMAP.md  THRESHOLD_HYPOTHESIS.md  TINY_OVERLAP_BASELINE_COMPARISON.md  TOP_LEVEL_RESEARCH_DOSSIER.md  VALIDATION.md
scripts/: ablate_preproc_and_ridge.py  build_clip_cache.py  build_full_index.py  build_nsd_imagery_index.py  build_target_clip_cache_robust.py  check_index_headers.py  check_setup.sh  compare_evals.py  decode_diffusion.py  demo_pipeline.sh  diagnose.sh  download_nod_metadata.py  download_nsd_imagery.py  download_sd_model.py  eval_all_models.py  eval_fmri2images_imagery.py  eval_perception_to_imagery_transfer.py  eval_shared1000_benchmark.py  eval_shared1000_full.py  extract_features.py  fit_preprocessing.py  make_novel_figures.py  make_paper_figures.py  per_condition_breakdown.py  quick_status.py  rebuild_target_cache.sh  run_fidelity_ladder.py  run_full_pipeline.py  run_hifi_analyses.py  run_imagery_ablations.py  run_novel_analyses.py  run_production.sh  run_real_novel_analyses.py  run_reconstruct_and_eval.py  setup_full_experiment.sh  setup_h100_experiment.sh  summarize_shared1000.py  train_clip_adapter.py  train_from_features.py  train_from_features_v2.py  (+5 more)
tests/: __init__.py  conftest.py  test_adapters_simple.py  test_brain_alignment.py  test_canonical_config_and_roi.py  test_canonical_dataset_and_model.py  test_canonical_imports.py  test_canonical_real_data_prep.py  test_canonical_trainer_and_export.py  test_canonical_workflows.py  test_cka.py  test_compare_evals.py  test_fdr.py  test_imagery_adapter.py  test_imagery_integration.py  test_imagery_scaffold.py  test_lora.py  test_losses.py  test_manifest.py  test_novel_losses.py  test_reliability.py  test_soft_reliability.py  test_stats.py  test_uncertainty.py
(+350 files in other folders)
