[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri2img"
version = "0.2.0"
description = "Perception vs. Imagination: cross-domain neural decoding from fMRI"
authors = [{name = "NSD Team", email = "nsd@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fsspec",
    "s3fs", 
    "pandas",
    "numpy",
    "nibabel",
    "pyarrow",
    "tqdm",
    "h5py",
    "pyyaml",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "ruff",
    "pytest",
    "pre-commit",
    "scikit-learn",
    "joblib",
    "torch",
    "torchvision",
    "open_clip_torch",
    "pillow",
    "requests"
]

diffusion = [
    "torch",
    "torchvision",
    "diffusers",
    "transformers",
    "accelerate",
    "pillow"
]

analysis = [
    "scipy",
    "scikit-learn",
    "ripser",
    "giotto-tda",
]

all = [
    "fmri2img[dev]",
    "fmri2img[diffusion]",
    "fmri2img[analysis]",
]

[project.scripts]
fmri2img-train-ridge = "fmri2img.training.train_ridge:main"
fmri2img-train-mlp = "fmri2img.training.train_mlp:main"
fmri2img-train-two-stage = "fmri2img.training.train_two_stage:main"
fmri2img-train-adapter = "fmri2img.training.train_clip_adapter:main"
fmri2img-train-smoke = "fmri2img.training.train_smoke:main"
fmri2img-decode = "fmri2img.generation.decode_diffusion:main"
fmri2img-eval = "fmri2img.eval.run_reconstruct_and_eval:main"
fmri2img-compare-evals = "fmri2img.eval.compare_evals:main"
fmri2img-ablate = "fmri2img.eval.ablate_preproc_and_ridge:main"
fmri2img-build-index = "fmri2img.data.build_full_index:main"
fmri2img-build-clip-cache = "fmri2img.data.build_clip_cache:main"
fmri2img-build-target-cache = "fmri2img.data.build_target_clip_cache_robust:main"
fmri2img-check-headers = "fmri2img.data.check_index_headers:main"
fmri2img-download-sd = "fmri2img.generation.download_sd_model:main"
fmri2img-status = "fmri2img.utils.quick_status:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"